# Comfy-StyleFrame-Sapiens

./: CHANGELOG.md  README.md  __init__.py  cli.py  pyproject.toml  requirements.txt  test.py
support/: classes_and_palettes.py  constants.py  datatypes.py  io.py  pipeline.py  proxy_tensor.py  sapiens_utils.py  sapiens_v2.py  utils.py  yolo.py
