[project]
name = "comfyui-sapienspose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = []


[tool.pyright]
include = ["."]
extraPaths = ["../..", ".."]
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"
pythonVersion = "3.11"
pythonPlatform = "Windows"

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.lint]
logger-objects = ["support.utils.log"]
typing-modules = ["support.datatypes"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.marimo.runtime]
pythonpath = [".", "..", "../..", "../../app"]
output_max_bytes = 10_000_000

[tool.marimo.display]
custom_css = ["support/static/nord.css"]
